syntax = "proto3";

option csharp_namespace = "GreeterServiceApp";

package greet;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  rpc CalcSum (SumRequest) returns (SumReply);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message SendName {
  string name = 1;
}


message SumRequest {
  int32 val1 = 1;
  int32 val2 = 2;
}

message SumReply {
  int32 sum = 1;
}
